# module-federation-examples

./: .cursorignore  .eslintrc  .firebaserc  .gitignore  .gitmodules  .huskyrc  .npmrc  .nvmrc  .prettierignore  .prettierrc  .yarnrc.yml  LICENSE  MIG.md  README.md  SECURITY.md  bun.lockb  changed.js  checkChangedWorkspaces.js  createworkspace.js  cspell.json  firebase.json  index.html  jest.config.cjs  lerna.json  listChange.sh  opencode.json  output.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  repotools.js  sync-workspaces.js  tsconfig.json  updateReadmeExampleList.js
.github/: FUNDING.yml
1373/: index.html
1374/: index.html
1376/: index.html
1378/: index.html
1381/: index.html
1382/: index.html
1400/: index.html
1402/: index.html
1403/: index.html
1404/: index.html
1409/: index.html
1413/: index.html
1416/: index.html  styles.css
1418/: index.html
1426/: index.html
1428/: index.html
1430/: index.html
1434/: index.html
1437/: index.html
1442/: index.html
1443/: index.html
1444/: index.html
1446/: index.html
1453/: index.html
1454/: index.html
1458/: index.html
1459/: index.html
1466/: index.html
1467/: index.html
1468/: index.html
1469/: index.html
1470/: index.html
1471/: index.html
1473/: index.html
1477/: app.js  index.html
1479/: index.html
1481/: index.html
1490/: index.html
1492/: index.html
1493/: index.html
1495/: index.html
rust-wasm/remote/: Cargo.toml  package.json  webpack.config.js
rust-wasm/remote/pkg/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
rust-wasm/remote/public/: index.html  index.js
rust-wasm/remote/src/: lib.rs  universe.rs
(+94022 files in other folders)
